--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
         "request": "launch",
         "preLaunchTask": "build",
         // If you have changed target frameworks, make sure to update the program path.
-        "program": "${workspaceFolder}/Class11/IntroToOOP/bin/Debug/net7.0/IntroToOOP.dll",
+        "program": "${workspaceFolder}/Class14/IntroToEf/bin/Debug/net7.0/IntroToEf.dll",
         "args": [],
-        "cwd": "${workspaceFolder}/Class11/IntroToOOP",
+        "cwd": "${workspaceFolder}/Class14/IntroToEf",
         "stopAtEntry": false,
         // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
         "serverReadyAction": {
