--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
       "request": "launch",
       "preLaunchTask": "build",
       // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/Class24/AuhtorizationProject/bin/Debug/net7.0/AuhtorizationProject.dll",
+      "program": "${workspaceFolder}/Class25/ManyToMany/bin/Debug/net7.0/ManyToMany.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/Class24/AuhtorizationProject",
+      "cwd": "${workspaceFolder}/Class25/ManyToMany",
       "stopAtEntry": false,
       // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
       "serverReadyAction": {
