--- a/Class28/NgApi/ClientApp/angular.json
+++ b/Class28/NgApi/ClientApp/angular.json
@@ -29,6 +29,7 @@
             "allowedCommonJsDependencies": ["oidc-client"],
             "assets": ["src/assets"],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
@@ -94,7 +95,10 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": ["src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
+            ],
             "scripts": []
           }
         },
