--- a/Class32/PcPartsManager/appsettings.json
+++ b/Class32/PcPartsManager/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;port=5433;Database=PcPartsManager;Username=postgres;Password=123456;IncludeErrorDetail=true;"
   },
+  "JwtSettings": {
+    "Issuer": "yourdomain.com",
+    "Audience": "yourdomain.com",
+    "SecretKey": "your secret key - this should not be here"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
