--- a/Class32/PcPartsManager/ClientApp/package.json
+++ b/Class32/PcPartsManager/ClientApp/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
