--- a/Class33/PcPartsManager/appsettings.json
+++ b/Class33/PcPartsManager/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;port=5433;Database=PcPartsManager;Username=postgres;Password=123456;IncludeErrorDetail=true;"
+    "DefaultConnection": "Host=localhost;port=5433;Database=PcPartsManagerAudited;Username=postgres;Password=123456;IncludeErrorDetail=true;"
   },
   "JwtSettings": {
     "Issuer": "yourdomain.com",
